RESOLVED FIXED150265
Fix image service menus somewhat
https://bugs.webkit.org/show_bug.cgi?id=150265
Summary Fix image service menus somewhat
Anders Carlsson
Reported 2015-10-16 17:40:09 PDT
Fix image service menus somewhat
Attachments
Patch (3.11 KB, patch)
2015-10-16 17:40 PDT, Anders Carlsson
no flags
Patch (3.15 KB, patch)
2015-10-19 10:40 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2015-10-16 17:40:53 PDT
Anders Carlsson
Comment 2 2015-10-19 10:40:31 PDT
Anders Carlsson
Comment 3 2015-10-19 11:59:57 PDT
Csaba Osztrogonác
Comment 4 2015-10-19 12:12:10 PDT
FYI: It broke the build on the Apple Mac 32 bit bots.
Ryan Haddad
Comment 5 2015-10-19 12:16:04 PDT
Build fix by Tim Horton in r191303: <http://trac.webkit.org/changeset/191303>
Note You need to log in before you can comment on or make changes to this bug.