Fix image service menus somewhat https://bugs.webkit.org/show_bug.cgi?id=150265

Reviewed by Tim Horton.

* Shared/ContextMenuContextData.cpp:
(WebKit::ContextMenuContextData::ContextMenuContextData):
It's a service menu if we have a controlled image.

* UIProcess/mac/WebContextMenuProxyMac.mm:
(WebKit::WebContextMenuProxyMac::setupServicesMenu):
Use an item provider.

Canonical link: https://commits.webkit.org/168472@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191302 268f45cc-cd09-0410-ab3c-d52691b4dbfc