Source/WebKit2/UIProcess/mac/WebContextMenuProxyMac.mm
@@ -258,9 +258,12 @@ void WebContextMenuProxyMac::setupServicesMenu(const ContextMenuContextData& con
         if (!image)
             return;
 
-        RetainPtr<CGImageRef> cgImage = image->makeCGImage();
-        RetainPtr<NSImage> nsImage = adoptNS([[NSImage alloc] initWithCGImage:cgImage.get() size:image->size()]);
-        items = @[ nsImage.get() ];
+        auto cgImage = image->makeCGImage();
+        auto nsImage = adoptNS([[NSImage alloc] initWithCGImage:cgImage.get() size:image->size()]);
+
+        auto itemProvider = adoptNS([[NSItemProvider alloc] initWithItem:[nsImage TIFFRepresentation] typeIdentifier:(__bridge NSString *)kUTTypeTIFF]);
+
+        items = @[ itemProvider.get() ];
     } else if (!context.controlledSelectionData().isEmpty()) {
         RetainPtr<NSData> selectionData = adoptNS([[NSData alloc] initWithBytes:(void*)context.controlledSelectionData().data() length:context.controlledSelectionData().size()]);
         RetainPtr<NSAttributedString> selection = adoptNS([[NSAttributedString alloc] initWithRTFD:selectionData.get() documentAttributes:nil]);
